Closed Bug 1678186 Opened 5 years ago Closed 5 years ago

Fix up draw call timing and move under PRINT_TIMINGS.

Categories

(Core :: Graphics: WebRender, defect)

defect

Tracking

()

RESOLVED FIXED
85 Branch
Tracking Status
firefox85 --- fixed

People

(Reporter: jrmuizel, Assigned: jrmuizel)

References

Details

Attachments

(1 file)

This also prints the shader name

This also prints the shader name

Pushed by jmuizelaar@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f1ad3d51b247 Fix up draw call timing and move under PRINT_TIMINGS. r=lsalzman
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: