Bug 1678186 - Fix up draw call timing and move under PRINT_TIMINGS. r=lsalzman

This also prints the shader name

Differential Revision: https://phabricator.services.mozilla.com/D97517